--- a/index.css
+++ b/index.css
@@ -2,15 +2,15 @@
 .main {
     background-color: rgb(232, 236, 236);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: repeat(7, auto);
-   grid-template-areas: " . title title title title . "
-                        " . sub sub sub sub . "
-                         " . . img img . . "
-                         " . timeline timeline timeline timeline . "
-                         " . quote quote quote quote . "
-                         " . link link link link  . "
-                         "footer footer footer footer footer footer";
+   grid-template-areas: "title title title title"
+                        "sub sub sub sub"
+                         ". img img ."
+                         "timeline timeline timeline timeline"
+                         "quote quote quote quote"
+                         "link link link link"
+                         "footer footer footer footer";
 }
 .title{
   grid-area: title;
@@ -42,6 +42,10 @@
   grid-area: photo;
   justify-self: center;
   align-self: center;
+  border-color: blue;
+  border-width: 5px;
+  border-style: groove;
+  border-radius: 15px;
 }
 #img-caption{
   grid-area: caption;
@@ -64,6 +68,8 @@
 }
 .link{
   grid-area: link;
+  justify-self: center;
+  align-self: center;
 }
 .footer{
   grid-area: footer;
